--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .top__header {
-  font-size:4em;
+  font-size:5em;
   color:#dd1972;
   font-weight: 700;
   height:20px;
@@ -68,7 +68,6 @@ fieldset {
   width:100%;
   background-color:#ffffff;
   border: #d0d0d0 2px solid;
-  padding:10px;
   color:#6e6e6e;
 
 }
@@ -88,14 +87,16 @@ fieldset {
   width:20%
 }
 
-.range__btn--update {
+.range__btn--update{
   background-color:#ffffff;
   height:40px;
   width:120px;
   border-radius:30%;
   color:#ffffff;
   background-color:#6e6e6e;
+  font-weight:700;
 }
+
 
 /*** ****/
 
@@ -119,8 +120,7 @@ fieldset {
 .player__form--ch {
   display:flex;
   width:100%;
-  height:25%;
-  flex-direction:rows;
+  height:15%;
 }
 
 .player__span--range {
@@ -141,6 +141,25 @@ fieldset {
 .player__input--guess { 
   height:40px;
   width:30%
+}
+
+.player__wrapper--btns {
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  height:20%;
+}
+
+.btn {
+  background-color:#ffffff;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  height:33px;
+  border-radius:25px;
+  color:#ffffff;
+  background-color:#6e6e6e;
+  font-weight:700;
 }
 
 .latest-score__container {
