Adjust closest target for delete function to be on the delete btn only

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ aside {
   padding:5px;
 }
 
-.card__btn--close {
+.card__btn--delete {
   border-radius: 50%;
   background-color: #6e6e6e;
   color:white;
