--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height:90%;
+  height:95%;
   width:50%;
   background-color:#f7f7f7;
   padding:20px;
@@ -58,10 +58,12 @@ main {
   width:30%;
   color:#6e6e6e;
   font-size:1.2em;
+  margin-top: 0;
+  margin-bottom: 5px;
 }
 
 .range__container--set {
-  height:17%;
+  height:21%;
   width:100%;
   background-color:#ffffff;
   border: #d0d0d0 2px solid;
@@ -73,11 +75,15 @@ main {
   width:30%;
 }
 
-.range__wrapper {
+.range__div--parent {
   height:40px;
   width:100%;
   display:flex;
   flex:1 1 
+}
+.range__div--first,
+.range__div--second {
+  width:35%;
 }
 
 .range__label { 
@@ -86,11 +92,12 @@ main {
   background-color:#ffffff;
   color:#6e6e6e;
   width:100px;
+  display: block
 }
 
 .range__input {
   height:35px;
-  width:40%
+  width:80%
 }
 
 .range__btn--update{
@@ -101,6 +108,7 @@ main {
   color:#ffffff;
   background-color:#6e6e6e;
   font-weight:700;
+  margin-top:20px;
 }
 
 
@@ -124,10 +132,18 @@ main {
   flex-direction: column;
   justify-content: space-between;
   border: #d0d0d0 2px solid;
-  height:51%;
+  height:48%;
   width:100%;
   background-color:#ffffff;
   padding:10px;
+}
+
+.player__div--guess {
+  width:100%;
+}
+
+.player__div--name {
+  width:100%;
 }
 
 .player__header--range {
@@ -135,6 +151,7 @@ main {
   font-size: 1.2em;
   color: #6e6e6e;
   font-weight: 300;
+  margin:0;
 }
 
 .player__form--ch {
@@ -150,12 +167,13 @@ main {
 
 .player__label {
   height:20px;
+  display: block;
   color: #6e6e6e;
 }
 
 .player__input {
   height:35px;
-  width:100%;
+  width:90%;
 }
 
 .player__input--guess { 
@@ -304,6 +322,42 @@ aside {
   border:1px solid #DD1972;
 }
 
-.range__div{
-  display: inline
+.range__div--error {
+  display: inline-flex;
+  margin:0;
+  font-size:.5em;
+  margin-top: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+/*  border:1px solid red;*/
+  align-items: center;
+  height:20px;
+  width:45%;
+  color: #DD1972;
 }
+
+#ch1__guess--error,
+#ch2__guess--error {
+  float:right;
+}
+
+#range__input--error{
+  margin-top: 30px;
+}
+
+.hidden {
+  display:none;
+}
+/*}
+
+.range__div{
+  display: flex;
+  margin:0;
+  font-size:1em;
+}
+
+.range__div {
+  margin-top: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+}*/
