--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ aside {
   color:white;
 }
 
+/* error messages*/
 
 .error-border {
   border:1px solid #DD1972;
@@ -329,7 +330,6 @@ aside {
   margin-top: 1%;
   margin-left: 1%;
   margin-right: 1%;
-/*  border:1px solid red;*/
   align-items: center;
   height:20px;
   width:45%;
@@ -348,16 +348,96 @@ aside {
 .hidden {
   display:none;
 }
-/*}
 
-.range__div{
-  display: flex;
-  margin:0;
-  font-size:1em;
+@media screen and (max-width: 875px) {
+  main {
+    width:100%;
+  }
+
+  aside {
+    width: 100%;
+  }
 }
 
-.range__div {
-  margin-top: 1%;
-  margin-left: 1%;
-  margin-right: 1%;
-}*/
+@media screen and (max-width: 600px) {
+  main {
+    height: 1500px;
+  }
+
+  .range__div--parent {
+    display: block;
+  }
+
+  .range__container--set {
+    height: 20%;
+  }
+
+  .range__div--first,
+  .range__div--second {
+    width:100%;
+  }
+
+  .range__btn--update {
+    width: 100%;
+  }
+
+  .range__input {
+    width:100%;
+  }
+
+  .player__container--ch {
+    height: 40%;
+    display: block;
+  }
+
+  .player__form--ch {
+    display: block;
+  }
+
+  .player__input,
+  .player__input--guess {
+    width: 100%;
+  }
+
+  .player__wrapper--btns {
+    display:block;
+    width:100%;
+  }
+  
+  .btn {
+    width:95%;
+    margin: 10px;
+  }
+
+  .latest-score__container {
+    width:100%;
+    height: 30%;
+  }
+
+  .latest-score__container article {
+    width:100%;
+    display: block;
+  }
+
+  .latest-score__article--ch1 {
+    border-right:0;
+    border-bottom: 1px solid #6e6e6e
+  }
+
+  .latest-score__container h3 {
+    width:100%;
+  }
+
+/*  .latest-score__article--ch2 {
+    border-top: 1px solid black;
+  }
+
+  .latest-score__span--name1{
+    width:100%;
+  }
+}
+*/
+
+
+
+
